--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ nav{
     box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
     padding: 5px 5%;
 }
-nav ul{
+/* nav ul{
     display:flex;
 }
 nav ul li a{
@@ -53,7 +53,7 @@ nav ul li a:hover{
 .active{
     font-weight: bold;
     color: #2d2a2a;
-}
+} */
 .text-container p:nth-child(1){
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bold;
@@ -97,10 +97,16 @@ nav ul li a:hover{
     border: 2px solid #373636;
     color: #373636;
 }
+.hire-btn a{
+    color: #373636;
+}
 .down-cv{
     background-color: #0b0b0b;
     color: #FFFFFF;
     border:none
+}
+.down-cv a{
+    color: #FFFFFF;
 }
 button:active{
     transform: scale(1.1);
@@ -109,13 +115,13 @@ button:active{
     height: 560px;
     position: absolute;
     bottom: 40px;
-    left: 60%;
-    transform: translateX(-60%);
+    left: 65%;
+    transform: translateX(-65%);
 }
 /*end section*/
 .about-container{
     width: 80%;
-    height: 330px;
+    max-height: auto;
     background-color: #FFFFFF;
     border-radius: 20px;
     box-shadow: 2px 12px rgba(0,0,0,0.2);
@@ -124,13 +130,14 @@ button:active{
     position: relative;
     justify-content: space-evenly;
     align-items: center;
+    padding: 20px;
 }
 .about-container img{
     display: block;
     max-height: 250px;
 }
 .about-text{
-    display: block;
+    display:inline-block;
     width: 550px;
     max-height: auto;
 }
@@ -145,7 +152,7 @@ button:active{
     color: #3e3d3d;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
-    font-size: 13px;
+    font-size: 11px;
     line-height: 5px;
 }
 .about-text p:nth-child(3),.about-text p:nth-child(4){
@@ -163,9 +170,12 @@ button:active{
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: #262525;
 }
+.about-text button a{
+    color: #FFFFFF;
+}
 /*end about*/
 .services{
-    height: 600px;
+    max-height: auto;
     background: #FFFFFF;
     padding: 2% 10% 0px 10%;
 }
@@ -203,8 +213,11 @@ button:active{
     flex-direction: column;
 }
 .box-container{
+    padding-bottom: 50px;
+    max-height: auto;
     display:inline-block;
     display: flex;
+    flex-wrap:wrap;
     justify-content: space-between;
 }
 .box-1{
@@ -248,6 +261,13 @@ button:active{
     outline: none;
     border-radius: 5px;
 }
+.box-1 button a,.box-2 button a,.box-3 button a{
+    color: #000000;
+}
+.box-1 button:hover,.box-2 button:hover,.box-3 button:hover{
+    background-color: #dddddd;
+    transition: all ease 1s;
+}
 .contact-me{
     width: 100%;
     height: 280px;
@@ -274,6 +294,10 @@ button:active{
     border: none;
     font-size: 14px;
     font-weight: bold;
+    color: #FFFFFF;
+}
+.contact-me button a{
+    color: #000000;
 }
 footer{
     height: 300px;
@@ -355,4 +379,76 @@ footer p:nth-child(2){
     font-size: 20px;
 }
 /*end service*/
+@media screen and (max-width: 600px) {
+    .model{
+        display:none;
+    }
+    .about-container button{
+        border-bottom: 1px solid #FFFFFF;
+    }
+    .services{
+        padding-left: 0;
+    }
+    .box-container{
+        max-width: auto;
+        margin-left: 20%;
+    }
+  }
 
+  /*responsive menu*/
+  .topnav{
+    max-height: 40px;
+    margin:0;
+    padding:0;
+  }
+  .topnav a {
+    float: left;
+    display: block;
+    color: #505050;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 15px;
+}
+.topnav a:nth-child(1) {
+    color: #fff;
+}
+.topnav a:hover {
+    border:none;
+    color: rgba(0,0,0,0.2);
+}
+
+.topnav a.active {
+    color: #000000;
+    font-weight: bolder;
+}
+
+.topnav .icon {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {
+        display: none;
+    }
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topnav.responsive {
+        position: relative;
+    }
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+}
